# SQLFormatv3

./: README.md  app.py  pyproject.toml
.github/workflows/: build-windows.yml
src/: app.py
src/sql_formatter/: __init__.py  formatter.py
