[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-formatter-gui"
version = "0.5.0"
description = "Small GUI tool to format SQL (EBH style)."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sql-formatter-gui = "app:main"
