[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-formatter-gui"
version = "0.7.3"
description = "SQL formatter GUI (EBH style)."
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
sql-formatter-gui = "app:main"
